--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-pager-view": "^5.4.15",
+    "react-native-safe-area-context": "^4.2.1",
+    "react-native-screens": "^3.13.1",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "^3.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-native-webview": "^11.17.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
